alteração nos arquivos javascript renomeação de arquivos.

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "watch": "npm-watch"
     },
     "dependencies": {
         "axios": "^0.21.1",
         "core-js": "^3.6.5",
+        "npm-watch": "^0.11.0",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
-        "vuex": "^3.6.2"
+        "vuex": "^3.5.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
